# Rbebelm

./: .Rbuildignore  .gitignore  404.html  AGENTS.html  AGENTS.md  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  configure  configure.win  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: 000-wrappers.R  010-contracts.R  agent-extensions.R  agent-layer.R  agent-loop.R  agent-providers.R  agent-session.R  api.R  classes.R  file-search.R  package.R
articles/: agent-framework.html  agent-framework.md  agents-and-tools.html  agents-and-tools.md  backend-and-webr.html  backend-and-webr.md  backend-dispatch.html  backend-dispatch.md  colbert.html  colbert.md  contextual-states.html  contextual-states.md  embeddinggemma.html  embeddinggemma.md  events-and-adapters.html  events-and-adapters.md  getting-started.html  getting-started.md  index.html  index.md  model-claims-benchmark.html  model-claims-benchmark.md  r-native-agent-layer.html  r-native-agent-layer.md  streaming-generation.html  streaming-generation.md  tui-module.html  tui-module.md
inst/: LICENSE.note
man/: AgentBackend.Rd  AgentExtension.Rd  BebelAgent.Rd  BebelAgentBackend.Rd  BebelAgentConfigureOptions.Rd  BebelAgentExtension.Rd  BebelAgentOptions.Rd  BebelAgentRef.Rd  BebelAgentRunOptions.Rd  BebelAsyncEventDrainOptions.Rd  BebelAsyncJob.Rd  BebelAsyncJobRef.Rd  BebelAsyncWaitOptions.Rd  BebelEmbeddingOptions.Rd  BebelFileFinder.Rd  BebelGenerationBenchmarkOptions.Rd  BebelGenerationOptions.Rd  BebelModel.Rd  BebelModelLoadOptions.Rd  BebelModelRef.Rd  BebelPooledStateOptions.Rd  BebelPromptTemplateProvider.Rd  BebelScalarText.Rd  BebelSkillProvider.Rd  BebelTokenEmbeddingOptions.Rd  BebelTokenStateOptions.Rd  BebelTokenizeOptions.Rd  BebelToolRef.Rd  BebelToolSpec.Rd  ColbertEmbeddings.Rd  ColbertEmbeddingsRef.Rd  ColbertModel.Rd  ColbertModelLoadOptions.Rd  ColbertModelRef.Rd  EmbeddingGemmaLoadOptions.Rd  EmbeddingGemmaModel.Rd  EmbeddingGemmaModelRef.Rd  EmbeddingGemmaOptions.Rd  PromptTemplateProvider.Rd  SkillProvider.Rd  (+178 more)
news/: index.html  index.md
reference/: BebelAgent.html  BebelAgent.md  BebelAgentBackend.html  BebelAgentBackend.md  BebelAgentConfigureOptions.html  BebelAgentConfigureOptions.md  BebelAgentExtension.html  BebelAgentExtension.md  BebelAgentOptions.html  BebelAgentOptions.md  BebelAgentRef.html  BebelAgentRef.md  BebelAgentRunOptions.html  BebelAgentRunOptions.md  BebelAsyncEventDrainOptions.html  BebelAsyncEventDrainOptions.md  BebelAsyncJob.html  BebelAsyncJob.md  BebelAsyncJobRef.html  BebelAsyncJobRef.md  BebelAsyncWaitOptions.html  BebelAsyncWaitOptions.md  BebelEmbeddingOptions.html  BebelEmbeddingOptions.md  BebelFileFinder.html  BebelFileFinder.md  BebelGenerationBenchmarkOptions.html  BebelGenerationBenchmarkOptions.md  BebelGenerationOptions.html  BebelGenerationOptions.md  BebelModel.html  BebelModel.md  BebelModelLoadOptions.html  BebelModelLoadOptions.md  BebelModelRef.html  BebelModelRef.md  BebelPooledStateOptions.html  BebelPooledStateOptions.md  BebelPromptTemplateProvider.html  BebelPromptTemplateProvider.md  (+313 more)
src/: Makevars.in  Makevars.win.in  emscripten_invoke.c  init.c  install.libs.R  wasm_stubs.c  (+2 more)
src/rust/: Cargo.toml  api.h
src/rust/bebelm/: Cargo.toml  Cargo.toml.orig  FORK.md  LICENSE  README.md  benchmark.sh  design.md  profile.sh
src/rust/bebelm/src/: agent.rs  architecture.rs  cache.rs  chat.rs  colbert.rs  config.rs  gguf.rs  lib.rs  main.rs  model.rs  sampler.rs  tensor.rs  tokenizer.rs  tool.rs
src/rust/bebelm/src/kernels/: activation.rs  attention.rs  conv.rs  dequant.rs  elementwise.rs  matmul.rs  mod.rs  rmsnorm.rs  rope.rs  softmax.rs
src/rust/bebelm/tests/: end_to_end.rs  users.csv
src/rust/embeddinggemma/: Cargo.toml
src/rust/embeddinggemma/src/: lib.rs  model.rs  tokenizer.rs
src/rust/src/: agent.rs  async_job.rs  backend.rs  cancel.rs  chatml.rs  colbert.rs  embedding_gemma.rs  events.rs  fuzzy_files.rs  generation.rs  json.rs  lib.rs  model.rs  options.rs  tokens.rs  tools.rs  util.rs  wasm.rs
(+43 files in other folders)
