[package]
name = "rbebelm_backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
publish = false

[lib]
crate-type = ["staticlib", "cdylib"]

[features]
default = ["portable"]
portable = []
native-simd = []

[dependencies]
savvy = "0.10.2"
serde_json = "1"
bebelm = { path = "bebelm" }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
rayon = "1"

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1

[workspace]
